k8s-deployment/whisper-deployment.yaml
# https://github.com/ahmetoner/whisper-asr-webservice
# https://github.com/ugoogalizer/whisper-api
# https://github.com/openai/whisper/
--- # deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: whisper-api
  name: whisper-api
spec:
  selector:
    matchLabels:
      app: whisper-api
  template:
    metadata:
      labels:
        app: whisper-api
    spec:
      containers:
        - name: whisper-api
          image: harbor.DOMAIN/whisper/whisper-api:0.0.3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9000
              name: http-whisper
              protocol: TCP
          resources:
            requests:
              cpu: 250m
              memory: 1000Mi
            limits:
              cpu: "4000m"
              memory: "2000Mi"
          volumeMounts:
            - mountPath: /root/.cache/whisper
              name: whisper-model
      volumes:
        - name: whisper-model
          persistentVolumeClaim:
            claimName: whisper-model
---
apiVersion: v1
kind: Service
metadata:
  name: http-whisper
spec:
  ports:
    - name: http
      port: 9000
      protocol: TCP
      targetPort: http-whisper
  selector:
    app: whisper-api
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    #cert-manager.io/cluster-issuer: "letsencrypt-staging"
    kubernetes.io/ingress.class: "nginx"
    acme.cert-manager.io/http01-ingress-class: "nginx-external"

    nginx.org/proxy-connect-timeout: 3600s
    nginx.org/proxy-read-timeout: 3600s
    nginx.org/proxy-send-timeout: 3600s
    nginx.org/client-max-body-size: "0" # Works
  name: whisper-api
spec:
  rules:
    - host: whisper.DOMAIN
      http:
        paths:
          - backend:
              service:
                name: http-whisper
                port:
                  number: 9000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - whisper.DOMAIN
      secretName: whisper-tls
